--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -58,7 +58,7 @@ FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
-I2C3.Timing=0x00C0EAFF
+I2C3.Timing=0x20404768
 KeepUserPlacement=false
 LTDC.ActiveH=272
 LTDC.ActiveW=480
@@ -80,8 +80,9 @@ Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=QUADSPI
 Mcu.IP11=RCC
-Mcu.IP12=SYS
-Mcu.IP13=TIM1
+Mcu.IP12=SDMMC1
+Mcu.IP13=SYS
+Mcu.IP14=TIM1
 Mcu.IP2=CRC
 Mcu.IP3=DMA
 Mcu.IP4=DMA2D
@@ -90,97 +91,103 @@ Mcu.IP6=FREERTOS
 Mcu.IP7=I2C3
 Mcu.IP8=LTDC
 Mcu.IP9=NVIC
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
 Mcu.Pin1=PE2
-Mcu.Pin10=PK7
-Mcu.Pin11=PK6
-Mcu.Pin12=PK5
-Mcu.Pin13=PG12
-Mcu.Pin14=PJ14
-Mcu.Pin15=PD1
-Mcu.Pin16=PF0
-Mcu.Pin17=PI10
-Mcu.Pin18=PK4
-Mcu.Pin19=PK3
+Mcu.Pin10=PD0
+Mcu.Pin11=PC11
+Mcu.Pin12=PC10
+Mcu.Pin13=PK7
+Mcu.Pin14=PK6
+Mcu.Pin15=PK5
+Mcu.Pin16=PG12
+Mcu.Pin17=PJ14
+Mcu.Pin18=PD1
+Mcu.Pin19=PF0
 Mcu.Pin2=PE1
-Mcu.Pin20=PJ15
-Mcu.Pin21=PF1
-Mcu.Pin22=PI12
-Mcu.Pin23=PI9
-Mcu.Pin24=PK1
-Mcu.Pin25=PK2
-Mcu.Pin26=PH0/OSC_IN
-Mcu.Pin27=PF2
-Mcu.Pin28=PI15
-Mcu.Pin29=PJ11
+Mcu.Pin20=PI10
+Mcu.Pin21=PK4
+Mcu.Pin22=PK3
+Mcu.Pin23=PJ15
+Mcu.Pin24=PD2
+Mcu.Pin25=PF1
+Mcu.Pin26=PI12
+Mcu.Pin27=PI9
+Mcu.Pin28=PK1
+Mcu.Pin29=PK2
 Mcu.Pin3=PE0
-Mcu.Pin30=PK0
-Mcu.Pin31=PH1/OSC_OUT
-Mcu.Pin32=PF3
-Mcu.Pin33=PI14
-Mcu.Pin34=PJ8
-Mcu.Pin35=PJ10
-Mcu.Pin36=PG8
-Mcu.Pin37=PF4
-Mcu.Pin38=PH5
-Mcu.Pin39=PH3
-Mcu.Pin4=PA14
-Mcu.Pin40=PJ7
-Mcu.Pin41=PJ9
-Mcu.Pin42=PF5
-Mcu.Pin43=PJ6
-Mcu.Pin44=PD15
-Mcu.Pin45=PD10
-Mcu.Pin46=PC3
-Mcu.Pin47=PD14
-Mcu.Pin48=PD9
-Mcu.Pin49=PD8
-Mcu.Pin5=PA13
-Mcu.Pin50=PB2
-Mcu.Pin51=PF12
-Mcu.Pin52=PG1
-Mcu.Pin53=PF15
-Mcu.Pin54=PJ4
-Mcu.Pin55=PD12
-Mcu.Pin56=PD13
-Mcu.Pin57=PJ5
-Mcu.Pin58=PA0/WKUP
-Mcu.Pin59=PF13
-Mcu.Pin6=PB6
-Mcu.Pin60=PG0
-Mcu.Pin61=PJ3
-Mcu.Pin62=PE8
-Mcu.Pin63=PD11
-Mcu.Pin64=PG5
-Mcu.Pin65=PG4
-Mcu.Pin66=PH7
-Mcu.Pin67=PF14
-Mcu.Pin68=PJ2
-Mcu.Pin69=PF11
-Mcu.Pin7=PG15
-Mcu.Pin70=PE9
-Mcu.Pin71=PE11
-Mcu.Pin72=PE14
-Mcu.Pin73=PH8
-Mcu.Pin74=PJ0
-Mcu.Pin75=PJ1
-Mcu.Pin76=PE7
-Mcu.Pin77=PE10
-Mcu.Pin78=PE12
-Mcu.Pin79=PE15
-Mcu.Pin8=PJ13
-Mcu.Pin80=PE13
-Mcu.Pin81=VP_CRC_VS_CRC
-Mcu.Pin82=VP_DMA2D_VS_DMA2D
-Mcu.Pin83=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin84=VP_SYS_VS_tim6
-Mcu.Pin85=VP_TIM1_VS_no_output1
-Mcu.Pin86=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.16.1
-Mcu.Pin9=PD0
-Mcu.PinsNb=87
+Mcu.Pin30=PC9
+Mcu.Pin31=PH0/OSC_IN
+Mcu.Pin32=PF2
+Mcu.Pin33=PI15
+Mcu.Pin34=PJ11
+Mcu.Pin35=PK0
+Mcu.Pin36=PC8
+Mcu.Pin37=PH1/OSC_OUT
+Mcu.Pin38=PF3
+Mcu.Pin39=PI14
+Mcu.Pin4=PC12
+Mcu.Pin40=PJ8
+Mcu.Pin41=PJ10
+Mcu.Pin42=PG8
+Mcu.Pin43=PF4
+Mcu.Pin44=PH5
+Mcu.Pin45=PH3
+Mcu.Pin46=PJ7
+Mcu.Pin47=PJ9
+Mcu.Pin48=PF5
+Mcu.Pin49=PJ6
+Mcu.Pin5=PA14
+Mcu.Pin50=PD15
+Mcu.Pin51=PD10
+Mcu.Pin52=PC3
+Mcu.Pin53=PD14
+Mcu.Pin54=PD9
+Mcu.Pin55=PD8
+Mcu.Pin56=PB2
+Mcu.Pin57=PF12
+Mcu.Pin58=PG1
+Mcu.Pin59=PF15
+Mcu.Pin6=PA13
+Mcu.Pin60=PJ4
+Mcu.Pin61=PD12
+Mcu.Pin62=PD13
+Mcu.Pin63=PJ5
+Mcu.Pin64=PA0/WKUP
+Mcu.Pin65=PF13
+Mcu.Pin66=PG0
+Mcu.Pin67=PJ3
+Mcu.Pin68=PE8
+Mcu.Pin69=PD11
+Mcu.Pin7=PB6
+Mcu.Pin70=PG5
+Mcu.Pin71=PG4
+Mcu.Pin72=PH7
+Mcu.Pin73=PF14
+Mcu.Pin74=PJ2
+Mcu.Pin75=PF11
+Mcu.Pin76=PE9
+Mcu.Pin77=PE11
+Mcu.Pin78=PE14
+Mcu.Pin79=PH8
+Mcu.Pin8=PG15
+Mcu.Pin80=PJ0
+Mcu.Pin81=PJ1
+Mcu.Pin82=PE7
+Mcu.Pin83=PE10
+Mcu.Pin84=PE12
+Mcu.Pin85=PE15
+Mcu.Pin86=PE13
+Mcu.Pin87=VP_CRC_VS_CRC
+Mcu.Pin88=VP_DMA2D_VS_DMA2D
+Mcu.Pin89=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin9=PJ13
+Mcu.Pin90=VP_SYS_VS_tim6
+Mcu.Pin91=VP_TIM1_VS_no_output1
+Mcu.Pin92=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.16.1
+Mcu.PinsNb=93
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -216,9 +223,19 @@ PB2.Mode=Single Bank 1
 PB2.Signal=QUADSPI_CLK
 PB6.Mode=Single Bank 1
 PB6.Signal=QUADSPI_BK1_NCS
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDMMC1_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDMMC1_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDMMC1_CK
 PC3.Locked=true
 PC3.Mode=SdramChipSelect1_1
 PC3.Signal=FMC_SDCKE0
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDMMC1_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDMMC1_D1
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
@@ -233,6 +250,8 @@ PD13.Mode=Single Bank 1
 PD13.Signal=QUADSPI_BK1_IO3
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDMMC1_CMD
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
 PE0.Signal=FMC_NBL0
@@ -402,42 +421,43 @@ QUADSPI.FifoThreshold=4
 QUADSPI.FlashSize=24
 QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,FlashSize,ChipSelectHighTime,SampleShifting
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
-RCC.AHBFreq_Value=200000000
+RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=50000000
-RCC.APB1TimFreq_Value=100000000
+RCC.APB1Freq_Value=54000000
+RCC.APB1TimFreq_Value=108000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=100000000
-RCC.APB2TimFreq_Value=200000000
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=200000000
-RCC.EthernetFreq_Value=200000000
-RCC.FCLKCortexFreq_Value=200000000
+RCC.CortexFreq_Value=216000000
+RCC.EthernetFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=200000000
+RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=50000000
-RCC.I2C2Freq_Value=50000000
-RCC.I2C3Freq_Value=50000000
-RCC.I2C4Freq_Value=50000000
+RCC.I2C1Freq_Value=54000000
+RCC.I2C2Freq_Value=54000000
+RCC.I2C3Freq_Value=54000000
+RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=50000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFToutputFreq_Value=9600000
-RCC.LPTIM1Freq_Value=50000000
+RCC.LPTIM1Freq_Value=54000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=200000000
-RCC.PLLCLKFreq_Value=200000000
+RCC.MCO2PinFreq_Value=216000000
+RCC.PLLCLKFreq_Value=216000000
 RCC.PLLI2SN=100
 RCC.PLLI2SPCLKFreq_Value=50000000
 RCC.PLLI2SQCLKFreq_Value=50000000
 RCC.PLLI2SRCLKFreq_Value=50000000
 RCC.PLLI2SRoutputFreq_Value=50000000
 RCC.PLLM=25
-RCC.PLLN=400
-RCC.PLLQCLKFreq_Value=200000000
-RCC.PLLQoutputFreq_Value=200000000
+RCC.PLLN=432
+RCC.PLLQ=9
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQoutputFreq_Value=48000000
 RCC.PLLSAIN=384
 RCC.PLLSAIPCLKFreq_Value=192000000
 RCC.PLLSAIQCLKFreq_Value=192000000
@@ -446,25 +466,26 @@ RCC.PLLSAIRCLKFreq_Value=76800000
 RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_8
 RCC.PLLSAIoutputFreq_Value=192000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RNGFreq_Value=200000000
+RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMCFreq_Value=200000000
+RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
+RCC.SDMMCFreq_Value=48000000
 RCC.SPDIFRXFreq_Value=50000000
-RCC.SYSCLKFreq_VALUE=200000000
+RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=50000000
-RCC.UART5Freq_Value=50000000
-RCC.UART7Freq_Value=50000000
-RCC.UART8Freq_Value=50000000
-RCC.USART1Freq_Value=100000000
-RCC.USART2Freq_Value=50000000
-RCC.USART3Freq_Value=50000000
-RCC.USART6Freq_Value=100000000
-RCC.USBFreq_Value=200000000
+RCC.UART4Freq_Value=54000000
+RCC.UART5Freq_Value=54000000
+RCC.UART7Freq_Value=54000000
+RCC.UART8Freq_Value=54000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=54000000
+RCC.USART3Freq_Value=54000000
+RCC.USART6Freq_Value=108000000
+RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=100000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=400000000
+RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
